# eval-view

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST_TRACKING.md  DEBUGGING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_CLOUD.md  LICENSE  Makefile  PRODUCTIZATION_SUMMARY.md  QUALITY_REVIEW.md  QUICKSTART_LANGGRAPH.md  README.md  SECURITY.md  SETUP_LANGGRAPH_EXAMPLE.md  TEST_IMPROVEMENTS.md  action.yml  benchmark-pip-results.json  benchmark-pip.sh  benchmark-uv-results.json  benchmark-uv.sh  benchmark_compare.html  diff-report.html  fix_86.py  fix_87.py  fix_90.py  glama.json  goosebench-test.txt  llms-full.txt  llms.txt  package.json  pyproject.toml  (+5 more)
.claude/: settings.local.json
.claude-plugin/: plugin.json
.evalview/: badge.json  config.yaml  latest-check.html  latest-redesign-v2.html  latest-redesign.html  latest-v3.html  latest-v4.html  latest-v5.html  latest-v6.html  latest-v6b.html  latest-v6c.html
.github/: PULL_REQUEST_TEMPLATE.md
agent-testing/: README.md
agent_eval/: __init__.py  cli.py
assets/: .gitkeep
demo/: README.md  demo.tape  start_gemma.sh  start_qwen.sh
demo-agent/: README.md  agent.py
demo-tests/: README.md  calculator-addition.yaml  config.yaml  readonly-research-agent.yaml  search-results.yaml
docs/: ADAPTERS.md  AGENTS.md  AUTOPR_CLOUD_INTEGRATION.md  BACKEND_REQUIREMENTS.md  BEHAVIOR_COVERAGE.md  CHAT_MODE.md  CI_CD.md  CLI_REFERENCE.md  CLOUD.md  COST_TRACKING.md  DATABASE_SETUP.md  DEBUGGING.md  EMPIRE_STRATEGY.md  EVALUATION_METRICS.md  FAQ.md  FRAMEWORK_SUPPORT.md  GETTING_STARTED.md  GOLDEN_TRACES.md  INTERNAL_DOGFOODING.md  LANGGRAPH_CLOUD.md  MCP_CONTRACTS.md  MODEL_CHECK.md  QUICKSTART_HUGGINGFACE.md  QUICKSTART_LANGGRAPH.md  RATIONALE.md  README.md  SETUP_LANGGRAPH_EXAMPLE.md  SIMULATE.md  SKILLS_TESTING.md  STATISTICAL_MODE.md  SUITE_TYPES.md  TEST_GENERATION.md  TOOL_CATEGORIES.md  TRACE_SPEC.md  TROUBLESHOOTING.md  TUTORIALS.md  YAML_SCHEMA.md
dogfood/: README.md  agent.py  mock_agent.py
evalview/: __init__.py  api.py  chat.py  chat_commands.py  chat_demo.py  chat_prompt.py  chat_runtime.py  chat_session.py  cli.py  compare.py  expander.py  mcp_server.py  openclaw.py  pytest_plugin.py  recorder.py  test_generation.py  test_generation_constants.py  test_generation_discovery.py  test_generation_seeds.py  test_generation_synthesis.py  test_generation_types.py
examples/: README.md  backend-implementations.md  config.example.yaml  github-workflow-autopr.yml  github-workflow-example.yml  statistical-mode-example.yaml  stock-analysis.yaml  test_case_toml.toml
guides/: detecting-llm-hallucinations-in-ci.md  pytest-for-ai-agents-langgraph-ci.md
gym/: README.md
marketing/: reddit-post-draft.md
scripts/: install.sh  setup-test-user.js
tests/: README.md  conftest.py  test_adapters.py  test_api.py  test_autopr.py  test_behavioral_anomalies.py  test_benchmark_hardening.py  test_canary_suite.py  test_cassette.py  (+65 more)
(+457 files in other folders)
