[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval"
version = "0.1.0"
description = "Testing framework for multi-step AI agents"
authors = [{name = "AgentEval Team"}]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "openai>=1.12.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
agent-eval = "agent_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_eval*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
