[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalview"
version = "0.1.0"
description = "Testing framework for multi-step AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "EvalView Team"}]
requires-python = ">=3.9"
keywords = ["ai", "agents", "testing", "evaluation", "llm", "langchain", "langgraph", "crewai", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "openai>=1.12.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
evalview = "evalview.cli:main"

[project.urls]
Homepage = "https://github.com/hidai25/EvalView"
Documentation = "https://github.com/hidai25/EvalView#readme"
Repository = "https://github.com/hidai25/EvalView.git"
"Issue Tracker" = "https://github.com/hidai25/EvalView/issues"
Changelog = "https://github.com/hidai25/EvalView/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalview*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
